--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 			<div class="col-7">
 				<div class="words">
 					<b><h1>Dive into Flat design<br>HNG Internship on the way</h1></b>
-					<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim<br> ad minim veniam, quis nostrud exercitation ullamco laboris nisi<br> ut aliquip ex ea commodo consequat.</p> -->
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim<br> ad minim veniam, quis nostrud exercitation ullamco laboris nisi<br> ut aliquip ex ea commodo consequat.</p>
 					<button type="button" class="start"><b>GET STARTED</b></button>
 				</div>
 				
 			</div>
 
-			<!-- <div class="col-4">
+			<div class="col-4">
 				<b><h1>NIKE<br>SHOES</h1></b>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim<br> ad minim veniam, quis nostrud exercitation ullamco laboris nisi<br> ut aliquip ex ea commodo consequat.</p>
 				<button type="button" class="start">Get Started</button>
-			</div> -->
+			</div>
 		</div>
 
 
